--- a/app/views/projects/dashboard.html.erb
+++ b/app/views/projects/dashboard.html.erb
@@ -1,2 +1,29 @@
-<h1>Projects#dashboard</h1>
-<p>Find me in app/views/projects/dashboard.html.erb</p>
+<nav class="navbar navbar-light bg-light justify-content-between">
+    <a class="navbar-brand">LISTA DE PROYECTOS </a>
+        <form class="form-inline">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="title" >
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form>
+</nav>
+<br>
+<table class="table">
+    <thead>
+        <tr>
+            <th>NOMBRE DEL PROYECTO</th>
+            <th>DESCRIPCION</th>
+            <th>FECHA DE INICIO</th>
+            <th>FECHA DE TERMINO</th>
+        </tr>
+    </thead>
+    <tbody>
+        <% @projects.each do |post|%>
+            <tr>
+                <td><%= post.name %></td>
+                <td><%= post.description %></td>
+                <td><%= post.start_date %></td>
+                <td><%= post.end_date %></td>
+            </tr> 
+        <% end %>
+    </tbody>
+</table>
+
