--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,2 +1,34 @@
-<h1>Projects#index</h1>
-<p>Find me in app/views/projects/index.html.erb</p>
+<h1>CREAR PROYECTO</h1>
+<!--action corresponde a la direccion de la vista create-->
+<form method='get' action='/projects/create' id="create_project">
+
+    <div class='form-group'>    
+        <label for="title">NOMBRE:</label> 
+        <input name="title" class="form-control" id="NAME" placeholder="name" >
+    </div>
+
+    <div class='form-group'>    
+        <label for="url_link">DESCRIPCION:</label> 
+        <input name='url_link' class="form-control" placeholder="description">
+    </div>
+
+    <div class='form-group'>    
+        <label for="content">FECHA DE INICIO:</label>  
+        <textarea name='content' class="form-control" placeholder="start date"></textarea>
+    </div>
+    <div class='form-group'>    
+        <label for="content">FECHA DE TERMINO:</label>  
+        <textarea name='content' class="form-control" placeholder="end date"></textarea>
+    </div>
+
+    <select class="custom-select custom-select-sm">
+        <option selected> Please select an option </option>
+        <option value="1">One</option>
+        <option value="2">Two</option>
+        <option value="3">Three</option>
+      </select>
+      <tr>
+    <div class='form-group'>
+        <button type="submit" class="btn btn-primary">Submit</button>
+    </div>
+</form>
