--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -20,14 +20,15 @@
         <label for="content">FECHA DE TERMINO:</label>  
         <textarea name='content' class="form-control" placeholder="end date"></textarea>
     </div>
-
-    <select class="custom-select custom-select-sm">
-        <option selected> Please select an option </option>
-        <option value="1">One</option>
-        <option value="2">Two</option>
-        <option value="3">Three</option>
-      </select>
-      <tr>
+    <div>
+        <select class="custom-select custom-select-sm">
+            <option selected> Please select an option </option>
+            <option value="1">Popuesta</option>
+            <option value="2">En Progreso</option>
+            <option value="3">Terminado</option>
+          </select>
+    </div>
+    <br>
     <div class='form-group'>
         <button type="submit" class="btn btn-primary">Submit</button>
     </div>
