--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -4,29 +4,31 @@
 
     <div class='form-group'>    
         <label for="title">NOMBRE:</label> 
-        <input name="title" class="form-control" id="NAME" placeholder="name" >
+        <input name="name" class="form-control" id="NAME" placeholder="name" >
     </div>
 
     <div class='form-group'>    
-        <label for="url_link">DESCRIPCION:</label> 
-        <input name='url_link' class="form-control" placeholder="description">
+        <label for="content">DESCRIPCION:</label>  
+        <textarea name='description' class="form-control" placeholder="description"></textarea>
+    </div>
+    <!--type date para las fechas en HTML-->
+     <div class='form-group'>    
+        <label for="title">FECHA DE INICIO:</label> 
+        <input type="date" name="start_date" class="form-control" id="start_date" placeholder="start date" >
     </div>
 
     <div class='form-group'>    
-        <label for="content">FECHA DE INICIO:</label>  
-        <textarea name='content' class="form-control" placeholder="start date"></textarea>
+        <label for="title">FECHA DE TERMINO:</label> 
+        <input type="date" name="end_date" class="form-control" id="end_date" placeholder="end date" >
     </div>
-    <div class='form-group'>    
-        <label for="content">FECHA DE TERMINO:</label>  
-        <textarea name='content' class="form-control" placeholder="end date"></textarea>
-    </div>
-    <div>
-        <select class="custom-select custom-select-sm">
-            <option selected> Please select an option </option>
-            <option value="1">Popuesta</option>
-            <option value="2">En Progreso</option>
-            <option value="3">Terminado</option>
-          </select>
+
+    <div class='form-group'> 
+        <select name="estadopr" class="form-control"  class="custom-select custom-select-sm">
+            <option selected> Popuesta</option>
+            <option value="Propuesta">Popuesta</option>
+            <option value="En Progreso">En Progreso</option>
+            <option value="Terminado">Terminado</option>
+        </select>
     </div>
     <br>
     <div class='form-group'>
